--- a/config_sample.env
+++ b/config_sample.env
@@ -1,14 +1,12 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "6520048760:AAF4Deylpvd0cBncgPqy_5Els26ZXFsO43A"                              # Require restart after changing it while bot running
+OWNER_ID = "5606087670"                               # Require restart after changing it while bot running
+TELEGRAM_API = "29177249"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "f1c8d021f35a8a0391325bda480e30ad"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://benx10:ANUben10@ben10.1anjvyl.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
 AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
